--- a/package.json
+++ b/package.json
@@ -6,11 +6,13 @@
   "dependencies": {
     "@matterlabs/hardhat-zksync-deploy": "0.2",
     "@matterlabs/hardhat-zksync-solc": "^0.3.2",
+    "@nomiclabs/hardhat-ethers": "^2.0.6",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
     "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@openzeppelin/contracts": "^4.6.0",
     "@openzeppelin/contracts-upgradeable": "^4.6.0",
     "dotenv": "^16.0.1",
+    "ethereum-waffle": "^3.4.4",
     "ethers": "5.5.4",
     "hardhat": "2.9.0",
     "merkletreejs": "^0.2.31",
