--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "hardhat-project",
+  "name": "@raisefinance/raisefinance-contracts",
+  "description": "Smart contracts of the https://www.raisefinance.io/ project",
+
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
-    "@nomiclabs/hardhat-waffle": "^2.0.3",
     "@typechain/ethers-v5": "^7.2.0",
     "@typechain/hardhat": "^2.3.1",
     "@types/chai": "^4.3.1",
@@ -20,11 +21,9 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.4.1",
     "eslint-plugin-promise": "^5.2.0",
-    "ethereum-waffle": "^3.4.4",
-    "ethers": "^5.7.0",
-    "hardhat": "^2.10.2",
+    "ethers": "^5.7.2",
+    "hardhat": "^2.12.2",
     "hardhat-abi-exporter": "^2.10.0",
-    "hardhat-contract-sizer": "^2.6.1",
     "hardhat-gas-reporter": "^1.0.8",
     "prettier": "^2.7.1",
     "prettier-plugin-solidity": "^1.0.0-beta.13",
@@ -35,20 +34,43 @@
     "typescript": "^4.8.2"
   },
   "dependencies": {
-    "@discordjs/rest": "^1.0.1",
-    "@discordx/utilities": "^5.0.0",
     "@matterlabs/hardhat-zksync-deploy": "^0.5.2",
     "@matterlabs/hardhat-zksync-solc": "^0.3.10",
     "@openzeppelin/contracts": "^4.7.1",
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
-    "axios": "^1.1.2",
-    "discord.js": "^14.2.0",
-    "discordx": "^11.0.8",
-    "fs-json-store": "^8.0.1",
-    "hardhat-change-network": "^0.0.7",
     "merkletreejs": "^0.2.32",
     "mongoose": "^6.6.6",
     "reflect-metadata": "^0.1.13",
     "zksync-web3": "^0.11.0"
-  }
+  },
+  "version": "1.0.1",
+  "main": ".eslintrc.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "hardhat test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/RaiseDAO/contracts.git"
+  },
+  "author": "asimaranov",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/RaiseDAO/contracts/issues"
+  },
+  "homepage": "https://github.com/RaiseDAO/contracts#readme",
+  "keywords": [
+    "solidity",
+    "ethereum",
+    "smart",
+    "contracts",
+    "security",
+    "zeppelin"
+  ],
+  "files": [
+    "**/*.sol",
+    "/abi/contracts/**/*.json"
+  ]
 }
