--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@raisefinance/raisefinance-contracts",
   "description": "Smart contracts of the https://www.raisefinance.io/ project",
-
   "devDependencies": {
     "@nomiclabs/hardhat-ethers": "^2.1.0",
     "@nomiclabs/hardhat-etherscan": "^3.1.0",
@@ -36,6 +35,7 @@
   "dependencies": {
     "@matterlabs/hardhat-zksync-deploy": "^0.5.2",
     "@matterlabs/hardhat-zksync-solc": "^0.3.10",
+    "@matterlabs/zksync-contracts": "^0.4.2",
     "@openzeppelin/contracts": "^4.7.1",
     "@openzeppelin/contracts-upgradeable": "^4.7.3",
     "merkletreejs": "^0.2.32",
